# mcp-tplink-router

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: add_port_forward.py  freepbx_setup.py  list_rules.py
src/mcp_tplink_router/: __init__.py  be3600_crypto.py  be3600_playwright.py  server.py  tplink_client.py
tests/: __init__.py  test_client.py  test_crypto.py  test_data_classes.py  test_playwright_client.py  test_server.py
