[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-tplink-router"
version = "0.1.0"
description = "Automate TP-Link BE3600 routers using Playwright browser automation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your@email.com"}
]
keywords = ["tplink", "router", "automation", "playwright", "port-forwarding", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: System :: Networking",
]
dependencies = [
    "playwright>=1.40.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "pycryptodome>=3.19.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
    "tplinkrouterc6u>=5.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
mcp-tplink-router = "mcp_tplink_router:main"

[project.urls]
Homepage = "https://github.com/consigcody94/mcp-tplink-router"
Repository = "https://github.com/consigcody94/mcp-tplink-router"
Issues = "https://github.com/consigcody94/mcp-tplink-router/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_tplink_router"]
